--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   </style>
 </head>
 <body>
-  <span>No.</span>
+  <span>
+    YES!<br />
+    <img src="https://c.tenor.com/GFMEhYFXFs0AAAAi/its-flat-and-thats-a-fact.gif" width="498" height="301" alt="Its Flat And Thats A Fact Sticker" />
+  </span>
 </body>
 </html>
